--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "main": "index.js",
    "license": "MIT",
    "scripts": {
+      "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
       "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
       "lint": "eslint . --ext .ts",
       "lint-fix": "eslint . --ext .ts --fix",
@@ -11,8 +12,11 @@
       "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
       "@types/cors": "^2.8.12",
       "@types/express": "^4.17.14",
+      "@types/joi": "^17.2.3",
+      "@types/jsonwebtoken": "^8.5.9",
       "@types/node": "^16.11.10",
       "@typescript-eslint/eslint-plugin": "^5.44.0",
       "@typescript-eslint/parser": "^5.44.0",
@@ -20,18 +24,21 @@
       "eslint-config-prettier": "6.15.0",
       "eslint-plugin-prettier": "3.2.0",
       "prettier": "^2.7.1",
+      "ts-node": "10.4.0",
       "ts-node-dev": "^2.0.0",
       "tsconfig-paths": "^4.1.0",
-      "typescript": "4.5.2",
-      "ts-node": "10.4.0"
+      "typescript": "4.5.2"
    },
    "dependencies": {
+      "bcryptjs": "^2.4.3",
+      "celebrate": "^15.0.1",
       "cors": "^2.8.5",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
+      "jsonwebtoken": "^8.5.1",
+      "mysql": "^2.14.1",
       "pg": "^8.8.0",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.2.45",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.45"
    }
 }
