--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@types/express": "^4.17.14",
       "@types/joi": "^17.2.3",
       "@types/jsonwebtoken": "^8.5.9",
+      "@types/multer": "^1.4.7",
       "@types/node": "^16.11.10",
       "@typescript-eslint/eslint-plugin": "^5.44.0",
       "@typescript-eslint/parser": "^5.44.0",
@@ -36,6 +37,7 @@
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
       "jsonwebtoken": "^8.5.1",
+      "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
       "pg": "^8.8.0",
       "reflect-metadata": "^0.1.13",
