--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "@types/jsonwebtoken": "^8.5.9",
       "@types/multer": "^1.4.7",
       "@types/node": "^16.11.10",
+      "@types/nodemailer": "^6.4.6",
       "@typescript-eslint/eslint-plugin": "^5.44.0",
       "@typescript-eslint/parser": "^5.44.0",
       "eslint": "^8.28.0",
@@ -37,9 +38,11 @@
       "date-fns": "^2.29.3",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
+      "handlebars": "^4.7.7",
       "jsonwebtoken": "^8.5.1",
       "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
+      "nodemailer": "^6.8.0",
       "pg": "^8.8.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.2.45"
