--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
    "main": "index.js",
    "license": "MIT",
    "scripts": {
-      "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
-      "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-      "lint": "eslint . --ext .ts",
-      "lint-fix": "eslint . --ext .ts --fix",
-      "start": "ts-node src/index.ts",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "lint": "eslint . --ext .ts",
+    "lint-fix": "eslint . --ext .ts --fix",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
