--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
    "main": "index.js",
    "license": "MIT",
    "scripts": {
-    "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
-    "lint": "eslint . --ext .ts",
-    "lint-fix": "eslint . --ext .ts --fix",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+      "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
+      "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+      "lint": "eslint . --ext .ts",
+      "lint-fix": "eslint . --ext .ts --fix",
+      "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
@@ -44,6 +44,7 @@
       "nodemailer": "^6.8.0",
       "pg": "^8.8.0",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.2.45"
+      "typeorm": "0.2.45",
+      "typeorm-pagination": "^2.0.3"
    }
 }
