--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "mysql": "^2.14.1",
       "nodemailer": "^6.8.0",
       "pg": "^8.8.0",
+      "rate-limiter-flexible": "^2.4.1",
       "redis": "^4.5.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.2.45",
