--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
       "handlebars": "^4.7.7",
       "ioredis": "^5.2.4",
       "jsonwebtoken": "^8.5.1",
+      "mime": "^3.0.0",
       "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
       "nodemailer": "^6.8.0",
