--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "main": "index.js",
    "license": "MIT",
    "scripts": {
+      "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
       "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
       "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
       "lint": "eslint . --ext .ts",
@@ -11,6 +12,13 @@
       "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
+      "@babel/cli": "^7.19.3",
+      "@babel/core": "^7.20.5",
+      "@babel/node": "^7.20.5",
+      "@babel/plugin-proposal-class-properties": "^7.18.6",
+      "@babel/plugin-proposal-decorators": "^7.20.5",
+      "@babel/preset-env": "^7.20.2",
+      "@babel/preset-typescript": "^7.18.6",
       "@types/bcryptjs": "^2.4.2",
       "@types/cors": "^2.8.12",
       "@types/express": "^4.17.14",
@@ -23,6 +31,8 @@
       "@types/redis": "^4.0.11",
       "@typescript-eslint/eslint-plugin": "^5.44.0",
       "@typescript-eslint/parser": "^5.44.0",
+      "babel-plugin-module-resolver": "^4.1.0",
+      "babel-plugin-transform-typescript-metadata": "^0.3.2",
       "eslint": "^8.28.0",
       "eslint-config-prettier": "6.15.0",
       "eslint-plugin-prettier": "3.2.0",
