--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
    "license": "MIT",
    "scripts": {
       "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-      "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/http/server.ts",
-      "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+      "dev:debug": "ts-node-dev -r tsconfig-paths/register --transpile-only --respawn --inspect=4321  src/shared/infra/http/server.ts",
+      "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
       "lint": "eslint . --ext .ts",
       "lint-fix": "eslint . --ext .ts --fix",
       "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
