--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,12 +6,12 @@
    "password": "papel123",
    "database": "api-vendas",
    "migrations": [
-     "src/shared/typeorm/migrations/*.ts"
+     "src/shared/infra/typeorm/migrations/*.ts"
     ],
     "entities": [
-       "src/modules/**/typeorm/entities/**/*.ts"
+       "src/modules/**/infra/typeorm/entities/**/*.ts"
     ],
    "cli": {
-      "migrationsDir": "src/shared/typeorm/migrations"
+      "migrationsDir": "src/shared/infra/typeorm/migrations"
    }
 }
