--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "4.7.2"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.0",
     "aws-sdk": "^2.1261.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^15.0.1",
@@ -70,6 +71,7 @@
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
     "typeorm": "0.2.45",
-    "typeorm-pagination": "^2.0.3"
+    "typeorm-pagination": "^2.0.3",
+    "uuid": "^9.0.0"
   }
 }
