update main path on package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-vendas",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/shared/infra/http/server.ts",
   "license": "MIT",
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
